src/snapshots/lustre_collector__node_stats_parsers__tests__parse_meminfo.snap
---
source: src/node_stats_parsers.rs
expression: parse_meminfo().easy_parse(meminfo)
---
Ok(
    (
        [
            MemTotal(
                NodeStat {
                    param: Param(
                        "mem_total",
                    ),
                    value: 5943788,
                },
            ),
            MemFree(
                NodeStat {
                    param: Param(
                        "mem_free",
                    ),
                    value: 4420248,
                },
            ),
            SwapTotal(
                NodeStat {
                    param: Param(
                        "swap_total",
                    ),
                    value: 2097148,
                },
            ),
            SwapFree(
                NodeStat {
                    param: Param(
                        "swap_free",
                    ),
                    value: 2097148,
                },
            ),
        ],
        "",
    ),
)
